--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@babel/plugin-proposal-decorators": "^7.6.0",
+    "antd": "^3.23.4",
     "antd-mobile": "^2.3.1",
     "babel-plugin-import": "^1.12.1",
     "customize-cra": "^0.6.0",
