--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "antd": "^3.23.4",
     "antd-mobile": "^2.3.1",
     "babel-plugin-import": "^1.12.1",
-    "customize-cra": "^0.6.0",
+    "customize-cra": "^0.6.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
@@ -21,9 +21,9 @@
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
