--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "antd": "^3.23.4",
     "antd-mobile": "^2.3.1",
     "babel-plugin-import": "^1.12.1",
+    "body-parser": "^1.19.0",
     "customize-cra": "^0.6.1",
+    "express": "^4.17.1",
+    "mongoose": "^5.7.1",
     "node-sass": "^4.12.0",
     "react": "^16.9.0",
     "react-app-rewired": "^2.1.3",
@@ -40,5 +43,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "less": "^3.10.3",
+    "less-loader": "^5.0.0",
+    "react-app-rewire-less": "^2.1.3"
   }
 }
