--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "antd-mobile": "^2.3.1",
     "babel-plugin-import": "^1.12.1",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "customize-cra": "^0.6.1",
     "express": "^4.17.1",
     "mongoose": "^5.7.1",
